--- a/index.html
+++ b/index.html
@@ -14,6 +14,39 @@
         margin-top: 80px;
         padding: 12px;
       }
+
+      .section-form {
+        margin-top: 42px;
+      }
+
+      .section-list-groups {
+        margin-top: 42px;
+      }
+
+      ul.list-group {
+        margin-top: 24px;
+      }
+
+      .section-cards {
+        margin-top: 42px;
+      }
+
+      .section-table {
+        margin-top: 42px;
+      }
+
+      .section-alert {
+        margin-top: 42px;
+      }
+
+      .section-navigation-option {
+        margin-top: 42px;
+      }
+
+      footer {
+        margin-top: 42px;
+        padding: 8px;
+      }
     </style>
   </head>
   <body>
@@ -47,7 +80,7 @@
     </nav>
 
     <!-- MODAL -->
-    <section class="section-modal">
+    <section class="section-modal container">
       <button
         class="btn btn-primary"
         data-toggle="modal"
@@ -81,6 +114,345 @@
         </div>
       </div>
     </section>
+
+    <!-- FORM -->
+    <section class="section-form container">
+      <form>
+        <div class="form-group row">
+          <label class="col-md-3 col-form-label">Enter username:</label>
+          <div class="col-md-9">
+            <input
+              type="text"
+              class="form-control"
+              aria-label="Enter username"
+            />
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-md-3 col-form-label">Enter password:</label>
+          <div class="col-md-9">
+            <input
+              type="password"
+              class="form-control"
+              aria-label="Enter password"
+            />
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-9 offset-md-3">
+            <button class="btn btn-primary">Login</button>
+          </div>
+        </div>
+      </form>
+    </section>
+
+    <!-- LIST GROUPS -->
+    <section class="section-list-groups container">
+      <div class="list-group">
+        <a href="#" class="list-group-item list-group-item-action active"
+          >Homepage</a
+        >
+        <a
+          href="#"
+          class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+          >Notifications
+          <span class="badge badge-primary badge-pill">3</span></a
+        >
+        <a href="#" class="list-group-item list-group-item-action">Blog</a>
+        <a href="#" class="list-group-item list-group-item-action">Contact</a>
+      </div>
+
+      <ul class="list-group">
+        <li class="list-group-item">Homepage</li>
+        <li class="list-group-item">Blog</li>
+        <li class="list-group-item">Contact</li>
+        <li class="list-group-item">Notifications</li>
+      </ul>
+    </section>
+
+    <!-- CARDS -->
+    <section class="section-cards container">
+      <div class="row">
+        <div class="col-md-4 mb-3">
+          <div class="card">
+            <img
+              src="https://source.unsplash.com/1Z2niiBPg5A"
+              alt="Card 1 image"
+              class="card-img-top"
+              height="250px"
+            />
+            <div class="card-body">
+              <h2 class="card-title">Card 1</h2>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Lorem Ipsum</li>
+              <li class="list-group-item">Lorem Ipsum</li>
+              <li class="list-group-item">Lorem Ipsum</li>
+              <li class="list-group-item">Lorem Ipsum</li>
+            </ul>
+
+            <div class="card-body">
+              <button type="button" class="btn btn-primary">Button</button>
+              <button type="button" class="btn btn-light">
+                Another button
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <div class="card">
+            <img
+              src="https://source.unsplash.com/1Z2niiBPg5A"
+              alt="Card 1 image"
+              class="card-img-top"
+              height="250px"
+            />
+            <div class="card-body">
+              <h2 class="card-title">Card 2</h2>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Lorem Ipsum</li>
+              <li class="list-group-item">Lorem Ipsum</li>
+              <li class="list-group-item">Lorem Ipsum</li>
+              <li class="list-group-item">Lorem Ipsum</li>
+            </ul>
+
+            <div class="card-body">
+              <button type="button" class="btn btn-primary">Button</button>
+              <button type="button" class="btn btn-light">
+                Another button
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              src="https://source.unsplash.com/1Z2niiBPg5A"
+              alt="Card 1 image"
+              class="card-img-top"
+              height="250px"
+            />
+            <div class="card-body">
+              <h2 class="card-title">Card 3</h2>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Lorem Ipsum</li>
+              <li class="list-group-item">Lorem Ipsum</li>
+              <li class="list-group-item">Lorem Ipsum</li>
+              <li class="list-group-item">Lorem Ipsum</li>
+            </ul>
+
+            <div class="card-body">
+              <button type="button" class="btn btn-primary">Button</button>
+              <button type="button" class="btn btn-light">
+                Another button
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- TABLES -->
+    <section class="section-table container">
+      <table class="table table-dark table-striped table-bordered table-hover">
+        <label class="mb-3">Table 1</label>
+        <thead class="thead-light">
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Mobile</th>
+          <th>Email</th>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Purnima</td>
+            <td>Kumar</td>
+            <td>9876564590</td>
+            <td>purnimakumar2021@gmail.com</td>
+          </tr>
+          <tr>
+            <td>Purnima</td>
+            <td>Kumar</td>
+            <td>9876564590</td>
+            <td>purnimakumar2021@gmail.com</td>
+          </tr>
+          <tr>
+            <td>Purnima</td>
+            <td>Kumar</td>
+            <td>9876564590</td>
+            <td>purnimakumar2021@gmail.com</td>
+          </tr>
+          <tr>
+            <td>Purnima</td>
+            <td>Kumar</td>
+            <td>9876564590</td>
+            <td>purnimakumar2021@gmail.com</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <table class="table table-striped table-hover">
+        <label class="mb-3">Table 2</label>
+        <thead class="thead-dark">
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Mobile</th>
+          <th>Email</th>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Purnima</td>
+            <td>Kumar</td>
+            <td>9876564590</td>
+            <td>purnimakumar2021@gmail.com</td>
+          </tr>
+          <tr>
+            <td>Purnima</td>
+            <td>Kumar</td>
+            <td>9876564590</td>
+            <td>purnimakumar2021@gmail.com</td>
+          </tr>
+          <tr>
+            <td>Purnima</td>
+            <td>Kumar</td>
+            <td>9876564590</td>
+            <td>purnimakumar2021@gmail.com</td>
+          </tr>
+          <tr>
+            <td>Purnima</td>
+            <td>Kumar</td>
+            <td>9876564590</td>
+            <td>purnimakumar2021@gmail.com</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <table class="table">
+        <label class="mb-3">Table 3</label>
+        <thead class="thead-light">
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Mobile</th>
+          <th>Email</th>
+        </thead>
+        <tbody>
+          <tr class="table-warning">
+            <td>Purnima</td>
+            <td>Kumar</td>
+            <td>9876564590</td>
+            <td>purnimakumar2021@gmail.com</td>
+          </tr>
+          <tr class="table-success">
+            <td>Purnima</td>
+            <td>Kumar</td>
+            <td>9876564590</td>
+            <td>purnimakumar2021@gmail.com</td>
+          </tr>
+          <tr class="table-warning">
+            <td>Purnima</td>
+            <td>Kumar</td>
+            <td>9876564590</td>
+            <td>purnimakumar2021@gmail.com</td>
+          </tr>
+          <tr class="table-success">
+            <td>Purnima</td>
+            <td>Kumar</td>
+            <td>9876564590</td>
+            <td>purnimakumar2021@gmail.com</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+    <!-- ALERTS -->
+    <section class="section-alert container">
+      <div class="alert alert-danger">
+        <button type="button" class="close" data-dismiss="alert">
+          &times;
+        </button>
+        <h2 class="alert-heading">Alert</h2>
+        <p class="alert-text">Something is wrong!</p>
+      </div>
+    </section>
+
+    <!-- NAVIGATION OPTION -->
+    <section class="section-navigation-option container">
+      <ul class="nav nav-pills mb-3">
+        <li class="nav-item">
+          <a href="#" class="nav-link active">Item 1</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Item 2</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Item 3</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link disabled">Item 4</a>
+        </li>
+      </ul>
+      <ul class="nav nav-tabs mb-3">
+        <li class="nav-item">
+          <a href="#" class="nav-link">Item 1</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Item 2</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link active">Item 3</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Item 4</a>
+        </li>
+      </ul>
+      <ul class="nav nav-pills">
+        <li class="nav-item">
+          <a href="#" class="nav-link">Item 1</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Item 2</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Item 3</a>
+        </li>
+        <li class="nav-item">
+          <a
+            href="#"
+            class="nav-link active dropdown-toggle"
+            data-toggle="dropdown"
+            >Item 4
+          </a>
+          <div class="dropdown-menu">
+            <p class="dropdown-item">Dropdown menu 1</p>
+            <p class="dropdown-item">Dropdown menu 2</p>
+            <p class="dropdown-item">Dropdown menu 3</p>
+            <div class="dropdown-divider"></div>
+            <p class="dropdown-item">Dropdown menu 4</p>
+          </div>
+        </li>
+      </ul>
+    </section>
+
+    <footer class="bg-light text-center">
+      <span
+        >built & designed by
+        <a href="https://purnimakumarr.github.io">Purnima Kumar</a></span
+      >
+    </footer>
 
     <!-- SCRIPTS -->
     <script src="jquery.slim.min.js"></script>
